@@ -40,3 +40,5 @@ number_template = "%N/LMS/%Y"
 template_file = "invoice.html"
 content_type = "text/html"
 
+[payments]
+suspension_percentage = 0
