@@ -31,7 +31,8 @@ version 1.5.6 Baal (??/??/????):
   - added customer ID on Invoices Report (alec)
   - we don't use capitalize in admininfo.
     it fixes problem with lastname capitalization (chilek)
-  - we show total assignments with discounts in userassignments (chilek)
+  - we show total assignments with discounts in userassignments and
+    customer lists (chilek)
 
 version 1.5.5 Anubis (25/03/2005):
 
